crates/dbdict/tests/snapshots/validate_spec__bad_cardinality.snap
---
source: crates/dbdict/tests/validate_spec.rs
assertion_line: 289
---
$version: "0.1.0"
$learn_more: https://github.com/pjc-crates/dbdict
relationships:
  - cardinality: many-to-many
    join: a.x = b.y
────────────────────────────────────────
error: [Q-1-12]
 --> dict.yaml:4:18
  |
4 |   - cardinality: many-to-many
  |                  ^^^^^^^^^^^^ Value must be one of: "one-to-one", "one-to-many", "many-to-one", got '"many-to-many"'
  |
  = help: Check the schema for allowed values?
